# Doti

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
demo/: imgui.ini  main.cpp
doti/Core/: Event.cppm  Logger.cppm  Random.cppm
doti/Core/Input/: InputManager.cppm
doti/Core/Loader/: ImageLoader.cppm  JxlLoader.cppm
doti/Core/Math/: Math.cppm
doti/Debug/: Logger.cppm  logger.cppm
doti/Geometry/: Triangle.cppm
doti/Graphics/: Buffer.cppm  Color.cppm  FrameCanvas.cppm  Material.cppm  Shader.cppm  Texture.cppm
doti/Graphics/Acceleration/: AABB.cppm  BVHTree.cppm  BoundingBox.cppm
doti/Graphics/Acceleration/Primitive/: Primitive.cppm  PrimitiveBase.cppm  SpherePrimitive.cppm  TrianglePrimitive.cppm
doti/Graphics/Camera/: Camera.cppm
doti/Graphics/Loader/: JxlLoader.cppm  ModelLoader.cppm  image_loader.cppm  jxl_loader.cppm
doti/Graphics/Render/: Canvas.cppm  Pipeline.cppm  RenderContext.cppm  RenderTexture.cppm
doti/Graphics/Render/Drawable/: Canvas.cppm  Drawable.cppm  Mesh.cppm  Triangle.cppm  mesh.cppm  triangle.cppm
doti/Graphics/Render/Drawable/Model/: Model.cppm
doti/Graphics/Render/Illumination/: Ray.cppm
doti/Graphics/Render/Model/: Model.cppm  model.cppm
doti/Graphics/Render/Object/: Mesh.cppm  Object.cppm  ObjectBase.cppm  Types.cppm
doti/Graphics/Render/Type/: Light.cppm  Material.cppm
doti/Graphics/Shader/: Shader.cppm  common.glsl  geometry_pass.frag  geometry_pass.vert  raster_frag.frag  raster_vert.vert  shader.cppm
doti/Graphics/Shader/Modules/: Shaders.cppm
doti/Math/: Math.cppm  math.cppm
doti/Scene/: FrameCanvas.cppm  Scene.cppm  SceneBase.cppm  SceneManager.cppm  SceneNode.cppm  SceneNodeFactory.cppm
doti/Utils/: Camera.cppm  Event.cppm  Random.cppm  color.cppm  ray.cppm  utils.cppm
doti/Utils/Camera/: Camera.cppm
doti/Utils/Event/: Event.cppm
doti/Window/: Window.cppm  window.cppm
doti/Window/UI/: UIComponent.cppm
doti/Window/UI/Components/: OpenGLView.cppm
editor/: App.cpp  main.cpp
editor/Test/: BallSpace.cppm  Bunny.cppm  TestScene.cppm
editor/Window/: FrameCanvas.cppm  RenderTexture.cppm  Window.cppm
editor/Window/UI/: UIComponent.cppm
editor/Window/UI/Components/: Console.cppm  DockSpace.cppm  MenuBar.cppm  OpenGLView.cppm
misc/: scene.schema.json
resource/models/nanosuit/: arm_dif.jxl  arm_showroom_ddn.jxl  arm_showroom_spec.jxl  body_dif.jxl  body_showroom_ddn.jxl  body_showroom_spec.jxl  glass_ddn.jxl  glass_dif.jxl  hand_dif.jxl  hand_showroom_ddn.jxl  hand_showroom_spec.jxl  helmet_diff.jxl  helmet_showroom_ddn.jxl  helmet_showroom_spec.jxl  leg_dif.jxl  leg_showroom_ddn.jxl  leg_showroom_spec.jxl  nanosuit.mtl
resource/scenes/: cornell-box.json  spheres.json
resource/shaders/: fragment_shader.glsl  rasterization.frag  rasterization.vert  vertex_shader.glsl
resource/shaders/BallSpace/: fragment_shader.glsl
resource/shaders/BunnyScene/: vertex_shader.glsl
resource/shaders/CornellBox/: fragment_shader.glsl  vertex_shader.vert
resource/shaders/PhongShadingScene/: fragment_shader.glsl
resource/shaders/PhotonMapping/: fragment_shader.glsl
resource/shaders/TestScene/: fragment_shader.glsl  vertex_shader.glsl
scripts/: CountCodelines.ps1  PngToJxl.sh  SpirvToModule.py
wrapper/: README.md  assimp.cppm  boost-signals2.cppm  eigen.cppm  gl.cppm  glfw.cppm  glm.cppm  imgui.cppm  json.cppm  libjxl.cppm  spdlog.cppm  std.mock.cppm  test.cppm
